# PhoneguyBot

./: .breakpoints  README.md  alive.py  commands.txt  football.txt  levels.json  main.py  mainbank.json  outpu.txt  pyproject.toml  requirements.txt  servers.json
