[tool.poetry]
name = "repl_python3_beta_PhoneguyBot"
version = "0.1.0"
description = ""
authors = ["Phoneguytech75 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
discord = "^1.7.3"
Flask = "^2.0.1"
discord-py-slash-command = "^3.0.1"
ssa-api-wrapper = "^0.6"
discord-components = "^2.1.1"
discord-buttons-plugin = "^0.1.2"
google-api-python-client = "^2.36.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
